--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -206,6 +206,29 @@
     opacity: 0;
   }
 }
+@keyframes float {
+  0%,
+  100% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
+
+@keyframes floatCard {
+  0%,
+  100% {
+    transform: translateY(0px) rotate(var(--rotation));
+  }
+  50% {
+    transform: translateY(-20px) rotate(var(--rotation));
+  }
+}
+
+.job-item {
+  animation: float 6s ease-in-out infinite;
+}
 
 @keyframes floatIcon {
   0%,
